--- a/index.html
+++ b/index.html
@@ -12,28 +12,76 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <section class="top-banner">
-    <div class="upper-width">
-      <h1>Welcome to</h1>
-      <h1><span class="orange_color"> Partha Pratim's </span>World!</h1>
-      <h3>MSc. in Data Science Student</h3>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nulla
-        dolores iure eos enim atque nobis unde? Aliquam esse consequuntur ex
-        obcaecati, repellendus eaque adipisci dignissimos architecto in ipsum
-        tenetur.
-      </p>
-      <a
-        class="link-button"
-        target="_blank"
-        href="//www.linkedin.com/in/imppratim/"
-        >Hire Me</a
-      >
-    </div>
-    <div class="upper-width">
-      <img src="/images/my-bg_port.png" alt="partha" />
-    </div>
-  </section>
-
-  <body></body>
+  <body>
+    <section class="top-banner flexible-container">
+      <div class="upper-width">
+        <h1>Welcome to</h1>
+        <h1><span class="orange_color"> Partha Pratim's </span>World!</h1>
+        <h3>MSc. in Data Science Student</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nulla
+          dolores iure eos enim atque nobis unde? Aliquam esse consequuntur ex
+          obcaecati, repellendus eaque adipisci dignissimos architecto in ipsum
+          tenetur.
+        </p>
+        <a
+          class="link-button"
+          target="_blank"
+          href="//www.linkedin.com/in/imppratim/"
+          >Hire Me</a
+        >
+      </div>
+      <div class="upper-width">
+        <img src="/images/my-bg_port.png" alt="partha" />
+      </div>
+    </section>
+    <section class="dream-big flexible-container">
+      <div class="upper-width">
+        <img src="/images/my-bg2.png" alt="partha" />
+      </div>
+      <div class="upper-width">
+        <h1>Dream Big</h1>
+        <h3>Love for Data</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum nulla
+          dolores iure eos enim atque nobis unde? Aliquam esse consequuntur ex
+          obcaecati, repellendus eaque adipisci dignissimos architecto in ipsum
+          tenetur.
+        </p>
+        <a
+          class="link-button"
+          target="_blank"
+          href="//www.linkedin.com/in/imppratim/"
+          >Download Resume</a
+        >
+      </div>
+    </section>
+    <section class="experience-area">
+      <h1>Experiences</h1>
+      <div class="flexible-container">
+        <div id="Frontend" class="experience-item">
+          <h1>Frontend Developer</h1>
+          <h3 class="orange_color">2020-2021</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint autem
+            consequuntur eaque fuga fugiat et provident expedita hic illum iusto
+            facere iure debitis voluptas aliquam soluta labore quos, eligendi
+            natus!
+          </p>
+        </div>
+        <div id="ML-eng" class="experience-item">
+          <h1>Machine Learning Engineer</h1>
+          <h3 class="orange_color">2021-Present</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. A, rerum
+            earum obcaecati explicabo quos quod incidunt et at eum ab, quae
+            repellat harum! Doloremque suscipit culpa recusandae cum quo sed.
+          </p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <p id="foo">&copy; Partha Pratim 2024, Data Science Student</p>
+    </footer>
+  </body>
 </html>
